Change log
==========

1.0 (unreleased)
----------------
- Zope 4 compatibility

- Python 3 compatibility

- documentation using Sphinx

- ``tox`` configuration for unit, coverage and code quality tests

- package configuration cleanup

- full flake8 compliance


0.2b3 (2011-11-21)
------------------
- Extend MANIFEST.in to include other missing files (.gif, .pt, .txt)


0.2b2 (2011-11-21)
------------------
- Fix source distribution by including README.txt and CHANGES.txt via
  manifest.

- Include test runner in buildout and fix broken tests.


0.2b1 (2011-11-19)
------------------
- Turn product into an egg and release on PyPI.

- Implement a forced refresh of the in-process cache of memcache data at the
  end of transactions to avoid stale data.

- mapping.py: Added 'getContainerKey' method to 'MemCacheMapping' in
  order to make it compatible with the API of the TemporaryFolder version
  (allows the session testing rig code can generate error messages).

- Added (preliminary) RAMCacheManager replacement.

- Removed  proxy's 'create' method, to allow other multiple of data to be
  stored.  The session data container now handles instantiating the
  mapping.

- Fixed the pickling of mappings *correctly*, instead of requiring that
  the proxy pick out the 'data' member.

- Expanded API for IProxy to expose more of the memcached client API.


0.1 (2006-05-31)
----------------
- CVS tag, 'mcdutils-0_1'

- Initial public release.